First commit on gh-pages branch.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@ border-top: red 1px solid; height: 10px;
         </div>
       </div>
     </section>
-    <script src="../build/index.js"></script>
+    <script src="build/index.js"></script>
     <script src="main.js"></script>
   </body>
 </html>
